Introduce more modern Java idioms